--- a/blog/package.json
+++ b/blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog2",
+  "name": "blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.0"
   }
 }
-
