--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.0"
   }
 }
 
